temp fix for overflow-x using universal body tag

--- a/src/components/FantasyFootball/index.css
+++ b/src/components/FantasyFootball/index.css
@@ -1,3 +1,6 @@
+body{
+  overflow-x: hidden;
+}
 .fantasy-page-header{
   background: white;
   background-image: url('https://vcore.com/wp-content/uploads/2017/09/football.jpeg');
@@ -5,6 +8,7 @@
   background-repeat: no-repeat;
   height: 420px;
   clip-path: polygon(51% 0, 100% 0, 100% 100%, 50% 80%, 0 100%, 0 0);
+  overflow-x: hidden;
 
 }
 .ff-title{
@@ -86,6 +90,7 @@
   font-family: 'Satisfy', sans-serif;
   font-size: 56px;
   text-shadow: 4px 3px 0px seagreen, 9px 8px 0px rgba(0,0,0,0.25);
+  overflow-x: hidden;
 }
 .ff-section-title#whitebg{
   color: seagreen;
@@ -96,4 +101,5 @@
   font-family: 'Satisfy', sans-serif;
   font-size: 56px;
   text-shadow: 4px 3px 0px #fff, 9px 8px 0px rgba(0,0,0,0.15);
+  overflow-x: hidden;
 }
